# cgame

./: .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml
include/: camera.h  cgame.h  controller.h  ecs.h  entity.h  error.h  file.h  function.h  input.h  memory.h  model.h  physics.h  scene.h  shader.h  system.h  tengine.h  window.h
include/components/: components.h  controller.h  meshrenderer.h  rigidbody.h  transform.h  types.h
include/glad/: gl.h
resources/shaders/: fragment.glsl  vertex.glsl
src/: camera.c  cgame.c  controller.c  ecs.c  file.c  input.c  main.c  memory.c  model.c  physics.c  scene.c  shader.c  tengine.c  window.c
src/components/: components.c  controller.c  meshrenderer.c  rigidbody.c  transform.c
test/: CMakeLists.txt  test_file.c  test_memory.c  test_scene.c
